2008-05-23  Neal H. Walfield  <neal@gnu.org>

	* cap.h (RM_object_status): Define.
	(object_dirty): Likewise.
	(object_referenced): Likewise.
	(object_status): New method.

	* folio.h (struct folio): Add fields dirty and referenced.
	(folio_object_referenced): New function.
	(folio_object_referenced_set): Likewise.
	(folio_object_dirty): Likewise.
	(folio_object_dirty_set): Likewise.

2008-05-21  Neal H. Walfield  <neal@gnu.org>

	* activity.h (struct activity_stats): Add field period.

2008-05-21  Neal H. Walfield  <neal@gnu.org>

	* thread.h (THREAD_EXCEPTION_PAGE_SLOT): Correctly define to 2.

2008-03-01  Neal H. Walfield  <neal@gnu.org>

	* rpc.h (RPC_SIMPLE_): If the send is interrupted, retry.
	(RPC_): If the call is interrupted, retry.

2008-02-21  Neal H. Walfield  <neal@gnu.org>

	* Makefile.am (COMMON_CPPFLAGS): Remove variable.
	(t_addr_CPPFLAGS): Replace use of $(COMMON_CPPFLAGS)
	with use of $(CHECK_CPPFLAGS).
	(t_addr_trans_CPPFLAGS): Likewise.
	(t_rpc_CPPFLAGS): Likewise.

2008-02-20  Neal H. Walfield  <neal@gnu.org>

	* cap.h (RM_object_discarded_clear): Define.
	(object_discarded_clear): New method.

2008-02-18  Neal H. Walfield  <neal@gnu.org>

	* exceptions.h: Include <stdint.h>.
	(struct exception_info): Add field discarded.

2008-02-16  Neal H. Walfield  <neal@gnu.org>

	* stddef.h (DEBUG_BOLD): New macro.

2008-02-15  Neal H. Walfield  <neal@gnu.org>

	* activity.h (struct activity_stats): Add field active_local.

2008-02-15  Neal H. Walfield  <neal@gnu.org>

	* folio.h (struct folio): Add field discarded.
	(folio_object_discarded): New function.
	(folio_object_discarded_set): Likewise.

2008-02-15  Neal H. Walfield  <neal@gnu.org>

	* folio.h (struct folio): Correctly calculate the size of
	the wait_queues_p array.
	(folio_object_wait_queue_p): Test the correct bit.
	(folio_object_wait_queue_p_set): Set the correct bit.

2008-02-13  Neal H. Walfield  <neal@gnu.org>

	* activity.h (RM_activity_stats): New definition.