@@ -1,3 +1,8 @@
+2008-05-24  Neal H. Walfield  <neal@gnu.org>
+
+	* ruth.c (main): Update user of rm_activity_stats to be consistent
+	with new interface.
+
 2008-03-01  Neal H. Walfield  <neal@gnu.org>
 
 	* ruth.c Include <signal.h>.
